# rusty-pellets

./: .gitignore  Cargo.toml  Git Notes.txt  README.md  babel.config.json  package-lock.json  package.json  webpack.config.js
MegaGunController/: GunControllerMega.elf  GunControllerMega.hex  GunControllerMega.slx  GunControllerMega.slx.original  GunControllerMega.slxc  Parameters.m  SandboxInputPorcessing.slx  SandboxInputPorcessing.slxc
MegaGunController/GunControllerMega_ert_rtw/: GunControllerMega.mk  GunControllerMega_targ_data_map.m  buildInfo.mat  codedescriptor.dmr  rtw_proj.tmw
MegaGunController/GunControllerMega_ert_rtw/tmwinternal/: simulink_cache.xml
MegaGunController/resources/project/: ProjectData.type.Info.xml
MegaGunController/slprj/ert/_sharedutils/: shared_file.dmr
UNOcan/: ArduinoMegaCANmainController.slx.autosave  GunControllerMega.slxc  arduino_CAN_transmit.elf  arduino_CAN_transmit.hex  arduino_CAN_transmit.slx  arduino_CAN_transmit.slx.original  arduino_CAN_transmit.slxc
UNOcan/GunControllerMega_ert_rtw/: GunControllerMega.mk  buildInfo.mat  codedescriptor.dmr
UNOcan/GunControllerMega_ert_rtw/tmwinternal/: simulink_cache.xml
UNOcan/arduino_CAN_transmit_ert_rtw/: arduino_CAN_transmit.mk  buildInfo.mat  codedescriptor.dmr  rtw_proj.tmw
UNOcan/arduino_CAN_transmit_ert_rtw/tmwinternal/: simulink_cache.xml
UNOcan/resources/project/: ProjectData.type.Info.xml
docs/: book.toml
docs/src/: ArduinoInterface.md  chapter_1.md
src/: can.rs  main.rs  servo_controller.rs
static/: index.js  like_button.js  main.js
templates/: base.html  home.html  index.html  tictactoe.html
(+20 files in other folders)
