[package]
name = "rusty-pellets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.2", features = ["ws"] }
axum-core = "0.3"

toml = "0.5.10"

askama = { git = "https://github.com/djc/askama.git", branch = "0.11.x", features = ["with-axum"] }
askama_axum = { git = "https://github.com/djc/askama.git", branch = "0.11.x" }

tokio = { version = "1.24.1", features = ["full"] }
tokio-postgres = "0.7.7"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tokio-tungstenite = "0.18.0"
futures-util = "0.3.25"
