[package]
name = "rusty-pellets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.2", features = ["ws"] }
axum-core = "0.3"
axum-extra = { version = "0.4.2", features = ["spa"] }

toml = "0.5.10"

askama = { git = "https://github.com/djc/askama.git", branch = "0.11.x", features = ["with-axum"] }
askama_axum = { git = "https://github.com/djc/askama.git", branch = "0.11.x" }

tokio = { version = "1.24.1", features = ["full"] }
tokio-postgres = "0.7.7"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
# todo: check if tungstenite is needed for main or just testing.
tokio-tungstenite = "0.18.0"
futures-util = "0.3.25"
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"


[target.'cfg(windows)'.dependencies]
kvaser-sys = { path = "../kvaser-sys" }


